--- a/auth/package.json
+++ b/auth/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
@@ -33,6 +34,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/jest": "^28.1.3",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.1",
